<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityForAddStudents"
    android:background="#DAD098">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_launcher_foreground"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="126dp"
        android:contentDescription="@string/todo" />

    <EditText
        android:id="@+id/studentEditing_addName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginStart="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="60dp"
        android:hint="@string/enter_student_name"
        android:text="@string/example_name"/>



    <EditText
        android:id="@+id/studentEditing_addNumberOfPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        android:layout_marginStart="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/studentEditing_addName"
        android:layout_marginTop="60dp"
        android:hint="@string/enter_student_phone_number"
        android:text="@string/example_numberPhone"/>


    <EditText
        android:id="@+id/studentEditing_addGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginStart="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/studentEditing_addNumberOfPhone"
        android:layout_marginTop="60dp"
        android:hint="@string/enter_student_group"
        android:inputType="phone"
        android:text="@string/example_group"/>

    <Button
        android:id="@+id/studentEditing_saveStudent"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="32dp"
        android:background="@drawable/icon_save"/>

    <Button
        android:id="@+id/studentEditing_btn_back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintRight_toLeftOf="@id/studentEditing_saveStudent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="32dp"
        android:background="@drawable/icon_back"
        />



</androidx.constraintlayout.widget.ConstraintLayout>
