<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15dp">

    <ImageView
        android:id="@+id/vh_student_icon_of_student"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/profle_of_student"
        android:contentDescription="@string/todo"/>

    <TextView
        android:id="@+id/vh_student_full_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/vh_student_icon_of_student"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:text="@string/example_name"/>

    <TextView
        android:id="@+id/vh_student_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/vh_student_full_name"
        app:layout_constraintTop_toBottomOf="@id/vh_student_full_name"
        android:textColor="@android:color/black"
        android:text="@string/example_numberPhone"/>


    <TextView
        android:id="@+id/vh_student_group"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="#6066A5"
        android:text="@string/example_group"
        android:textSize="32sp"
        android:textAlignment="center"
        android:paddingTop="5dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>