<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityForAddStudents"
    android:background="#DAD098">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_launcher_foreground"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="126dp"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/nameStudent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginStart="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="60dp"
        android:text="@string/example_name"
        android:textSize="20sp"/>



    <TextView
        android:id="@+id/numberOfPhoneStudent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginStart="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/nameStudent"
        android:layout_marginTop="60dp"
        android:text="@string/example_numberPhone"
        android:textSize="20sp"/>


    <TextView
        android:id="@+id/groupStudent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginStart="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/numberOfPhoneStudent"
        android:layout_marginTop="60dp"
        android:text="@string/example_group"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/btn_back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="32dp"
        android:background="@drawable/icon_back"/>

    <Button
    android:id="@+id/btn_editing"
    android:layout_width="50dp"
    android:layout_height="50dp"
    app:layout_constraintRight_toLeftOf="@id/btn_back"
    app:layout_constraintBottom_toBottomOf="parent"
    android:layout_margin="32dp"
    android:background="@drawable/icon_editing"/>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintRight_toLeftOf="@id/btn_editing"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="32dp"
        android:background="@drawable/icon_save"/>



</androidx.constraintlayout.widget.ConstraintLayout>
